--- a/hateoas-backend/src/main/resources/i18n/messages.properties
+++ b/hateoas-backend/src/main/resources/i18n/messages.properties
@@ -1,1 +1,2 @@
 error.constraints.techStack.NotBlank.message = Technology Stack cannot be blank
+error.constraints.FieldsGreatness.message = {firstFieldName} must be greater than {secondFieldName}
