added i18n support for custom exceptions

--- a/hateoas-backend/src/main/resources/i18n/messages.properties
+++ b/hateoas-backend/src/main/resources/i18n/messages.properties
@@ -1,2 +1,4 @@
 error.constraints.techStack.NotBlank.message = Technology Stack cannot be blank
 error.constraints.FieldsGreatness.message = {firstFieldName} must be greater than {secondFieldName}
+error.capability.NotFound.message = Capability with ID: {0} Not found
+error.internal.server.error.message = Internal server error
