--- a/hateoas-backend/src/main/resources/i18n/messages_tr.properties
+++ b/hateoas-backend/src/main/resources/i18n/messages_tr.properties
@@ -1,2 +1,4 @@
 error.constraints.techStack.NotBlank.message = Technology Stack bo\u015F olamaz
 error.constraints.FieldsGreatness.message = {firstFieldName}, {secondFieldName} den b\u00FCy\u00FCk olmal\u0131
+error.capability.NotFound.message = {0} ID li kullan\u0131c\u0131 bulunamad\u0131
+error.internal.server.error.message = \u0130\u00E7 sunucu hatas\u0131
